# evmbin

./: Cargo.toml  README.md
src/: main.rs
src/commands/: account_cmd.rs  call_message_cmd.rs  create_contract_cmd.rs  deposit_cmd.rs  mod.rs
