[package]
name = "evmbin"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", features = ["derive"]}
docopt = "1.1.1"
evm = "0.35.0"
ethereum-types = "0.13.1"
hex = "0.4.3"
kvdb = "0.10.0"
kvdb-rocksdb = "0.14"
parity-bytes = "0.1.2"
rlp = "0.5.1"
rustc-hex = "2.1.0"
serde = { version = "1.0.101", features = ["derive"] }
sha3 = "0.10.2"
structopt = "0.3.26"
